Lower size of count font. Fix bug with long filters not changing to select boxes. Re-align actions to right side.

--- a/bootstrap/sentry.less
+++ b/bootstrap/sentry.less
@@ -336,7 +336,7 @@ footer {
       .border-radius(60px);
       line-height: 62px;
       text-align: center;
-      font-size: 26px;
+      font-size: 24px;
       font-weight: 400;
       letter-spacing: -1px;
       font-family: "proxima nova", "proxima-nova", "heletica-neue", sans-serif;
@@ -348,10 +348,11 @@ footer {
       margin-bottom: 0;
       font-size: 14px;
       /*font-family: "proxima nova", "proxima-nova", "heletica-neue", sans-serif;*/
+      padding-right: 14px;
       .tag {
+        margin-left: 5px;
         font-size: 12px;
         .pull-right;
-        margin-right: 50px;
         .border-radius(6px);
         background: #fff;
         padding: 2px 6px;
@@ -360,21 +361,20 @@ footer {
     }
     .meta {
       position: absolute;
-      right: 15px;
+      right: 40px;
       top: 20px;
     }
     .actions {
       position: absolute;
       right: 15px;
-      bottom: 20px;
+      top: 20px;
       list-style-type: none;
       margin: 0;
       padding: 0;
       li {
-        padding: 2px;
+        margin-bottom: 12px;
         font-size: 14px;
-        margin-left: 10px;
-        display: inline-block;
+        line-height: 18px;
         .checked {
           color: orange;
         }
